GNOME Bugzilla – Bug 795937
uridecodebin3: Fix GList leak
Last modified: 2018-05-09 06:34:26 UTC
Fix GList leak detected by valgrind
Created attachment 371807 [details] [review] uridecodebin3: Fix GList leak
Comment on attachment 371807 [details] [review] uridecodebin3: Fix GList leak Thanks for the patch. I think the g_list_remove_link(.., tmp) earlier in the code should perhaps be g_list_delete_link(.., tmp) instead.
Created attachment 371826 [details] [review] uridecodebin3: Fix GList leak Use g_list_delete_link instead of g_list_remove_link
commit 7e724bddf393549760fa5859d6a2646c23b6da03 (HEAD -> master) Author: Seungha Yang <seungha.yang@navercorp.com> Date: Wed May 9 10:39:23 2018 +0900 uridecodebin3: Fix GList leak https://bugzilla.gnome.org/show_bug.cgi?id=795937