uridecodebin3: Fix GList leak

https://bugzilla.gnome.org/show_bug.cgi?id=795937